# matrix

./: .clang-format  .gitignore  CMakeLists.txt  Consept.h  Expression-inl.h  Expression.cpp  Expression.h  Matrix-tmp.h  Matrix.cpp  Matrix.h  MatrixConfig.cmake  Polynomial-inl.h  Polynomial.cpp  Polynomial.h  Project2  Project2.cpp  README.md  RationalExpression-inl.h  RationalExpression.cpp  RationalExpression.h  Variable.cpp  Variable.h  compile_commands.json  concept.h  functionaly  functionaly.cpp  main.cpp  polynomial-temp.h  polynomial.cpp  polynomial.h  project.cpp  update_and_clone_submodule.sh
include/: CMakeLists.txt  matrix-tmp.h  matrix.h
libs/: CMakeLists.txt
src/: CMakeLists.txt  Matrix.h  concept.h  functionaly.cpp  main.cpp  matrix-tmp.h  matrix.h  polynomial-helper-tmp.h  polynomial-helper.h  polynomial-tmp.h  polynomial.h
src/common/: CMakeLists.txt  concept.h
src/matrix/: CMakeLists.txt
src/polynomial/: CMakeLists.txt  polynomial-helper-tmp.h  polynomial-helper.h  polynomial-tmp.h  polynomial.h
test/: CMakeLists.txt  matrixFunctionality.cpp  polynomialFunctionality.cpp  test_main.cpp  test_other.cpp
tests/: CMakeLists.txt  matrixFunctionality.cpp  polynomialFunctionality.cpp
